# barberque_allocation

./: .gitignore  .ycm_extra_conf.py  CHANGELOG  CMakeLists.txt  Kconfig  README  bosp.mk
.cmake/: FindADL.cmake  FindBoost.cmake  FindNVML.cmake  FindOpenCL.cmake  FindOpenGL.cmake  GetGitRevisionDescription.cmake
bbque/: CMakeLists.txt  application_manager.cc  application_proxy.cc  barbeque.cc  binding_manager.cc  command_manager.cc  configuration_manager.cc  console_logger.cc  daemonize.cc  data_manager.cc  dynamic_library.cc  modules_factory.cc  platform_manager.cc  platform_proxy.cc  plugin_manager.cc  power_monitor.cc  process_manager.cc  profile_manager.cc  resource_accounter.cc  resource_manager.cc  resource_mapping_validator.cc  resource_partition_validator.cc  rpc_messages.cc  rpc_proxy.cc  scheduler_manager.cc  signals_manager.cc  synchronization_manager.cc  test_platform_data.cc
bbque/android/: CMakeLists.txt  getdelim.cc  getline.cc
bbque/app/: CMakeLists.txt  application.cc  process.cc  recipe.cc  schedulable.cc  working_mode.cc
bbque/em/: CMakeLists.txt  event.cc  event_manager.cc  event_wrapper.cc
bbque/pm/: CMakeLists.txt  Kconfig  battery.cc  battery_manager.cc  model_manager.cc  power_manager.cc  power_manager_amd.cc  power_manager_cpu.cc  power_manager_cpu_odroidxu.cc  power_manager_gpu_arm_mali.cc  power_manager_mango.cc  power_manager_nvidia.cc
bbque/pm/models/: CMakeLists.txt  model.cc  model_arm_cortexa15.cc  system_model.cc  system_model_odroid_xu3.cc
bbque/pp/: linux.cc  linux_platform_proxy.cc  local_platform_proxy.cc  mango_platform_proxy.cc  opencl.cc  opencl_platform_proxy.cc  proc_listener.cc  remote_platform_proxy.cc  test_platform_proxy.cc
bbque/res/: CMakeLists.txt  binder.cc  bitset.cc  identifier.cc  resource_assignment.cc  resource_path.cc  resource_tree.cc  resource_type.cc  resources.cc  usage.cc
bbque/tg/: CMakeLists.txt  Kconfig  mem_buffer.cc  partition.cc  task.cc  task_graph.cc
bbque/utils/: CMakeLists.txt  assert.cc  attributes_container.cc  cgroups.cc  console_logger.cc  deferrable.cc  extra_data_container.cc  metrics_collector.cc  perf.cc  schedlog.cc  timer.cc  worker.cc
bbque/utils/logger/: CMakeLists.txt  android_logger.cc  console_logger.cc  log4cpp_logger.cc
bbque/utils/logging/: CMakeLists.txt  android_logger.cc  console_logger.cc  log4cpp_logger.cc  logger.cc
bindings/: CMakeLists.txt  Kconfig
bindings/python/: CMakeLists.txt  rtlib_bbqueexc.cc  rtlib_bbqueexc.h  rtlib_enums.cc  rtlib_enums.h  rtlib_python.cc  rtlib_types_wrappers.cc  rtlib_types_wrappers.h
config/: bbque-layapp.sh.in  bbque.conf.in  bbque.conf_dbg.in  bbqued.defaults.in  bbqued.in  (+2 more)
libdci/: CMakeLists.txt  data_client.cc
libpms/: CMakeLists.txt  app_controller.cc  exec_synchronizer.cc  generic.recipe  generic_manga.recipe
libpms/config/: libpms.conf.in
libpms/recipes/: generic.recipe  generic_manga.recipe  old_example.recipe  test_manga.recipe
libtg/: CMakeLists.txt  mem_buffer.cc  partition.cc  task.cc  task_graph.cc
mpi/: CMakeLists.txt  Doxyfile.in  Kconfig  bosp.mk  command_manager.cc  config.cc  mpirun.conf.in  mpirun_core.cc  mpirun_exc.cc  mpirun_start.cc  process_checker.cc
mpi/include/: command_manager.h  config.h  mpirun_exc.h  ompi_types.h  process_checker.h  version.h
plugins/agent_proxy/grpc/: CMakeLists.txt  Kconfig  agent_client.cc  agent_client.h  agent_impl.cc  agent_impl.h  agent_proxy.cc  agent_proxy.h  agent_proxy_grpc_plugin.cc  agent_proxy_grpc_plugin.h  agent_server.cc  agent_server.h
plugins/agent_proxy/grpc/proto/: CMakeLists.txt  agent_com.proto
plugins/logger/android/: CMakeLists.txt
plugins/ploader/rxml/: CMakeLists.txt  Kconfig  rxml_ploader.cc  rxml_ploader.h  rxml_plugin.cc  rxml_plugin.h
plugins/rloader/rxml/: CMakeLists.txt  Kconfig  rxml_plugin.cc  rxml_plugin.h  rxml_rloader.cc  rxml_rloader.h
plugins/rloader/xml/: CMakeLists.txt  Kconfig  xml_rloader.cc  xml_rloader.h
plugins/schedpol/cloves/: CMakeLists.txt  Kconfig  cloves_plugin.cc  cloves_plugin.h  cloves_schedpol.cc  cloves_schedpol.h
plugins/schedpol/contrex/: CMakeLists.txt  Kconfig  contrex_plugin.cc  contrex_schedpol.cc  contrex_schedpol.h
plugins/schedpol/gridbalance/: CMakeLists.txt  Kconfig  gridbalance_plugin.cc  gridbalance_plugin.h  gridbalance_schedpol.cc  gridbalance_schedpol.h
plugins/schedpol/manga/: CMakeLists.txt  Kconfig  manga_plugin.cc  manga_plugin.h  manga_schedpol.cc  manga_schedpol.h
plugins/schedpol/mangav2/: CMakeLists.txt  Kconfig  mangav2_plugin.cc  mangav2_plugin.h  mangav2_schedpol.cc  mangav2_schedpol.h
plugins/schedpol/perdetemp/: CMakeLists.txt  Kconfig  perdetemp_plugin.cc  perdetemp_plugin.h  perdetemp_schedpol.cc  perdetemp_schedpol.h
plugins/schedpol/random/: CMakeLists.txt  Kconfig  random_schedpol.cc  random_schedpol.h
plugins/schedpol/scallop/: CMakeLists.txt  Kconfig  scallop_plugin.cc  scallop_plugin.h  scallop_schedpol.cc  scallop_schedpol.h
plugins/schedpol/tempura/: CMakeLists.txt  Kconfig  tempura_plugin.cc  tempura_plugin.h  tempura_schedpol.cc  tempura_schedpol.h
tools/: CMakeLists.txt  bbque-release-agent.in  bbqueConsole.sh.in  bbqueCpuUsageParser.awk  bbqueCpuUsagePlotter.sh  bbqueOpListBuilder.awk  bbquePlatformLayoutParser.awk  bbquePlotPowerTrace.py.in  bbqueStabilityAnalysisPlotter.sh.in  bbqueStabilityAnalysisScenario1.cmd  bbqueStabilityAnalysisScenario2.cmd  bbqueSystemdSetup.sh  signalAnalysisPlotter.sh
tools/development/: bbqueCodeStyle.sh.in  bbquePluginDev.sh.in
tools/development/templates/: plugin_templates.tar.bz2  rloader_templates.tar.bz2  schedpol_templates.tar.bz2
tools/monitor/: bbqueCpuThermalPlotter.sh  bbqueCpuUsageDump.sh.in  bbqueCpuUsageDumpParser.awk.in  bbquePlotPowerTrace.py.in
tools/plpxml/: CMakeLists.txt  plp_translator.cc  plp_translator.hpp  plpxml.cc  xml_parser.cc
tools/pysched/: main.py
tools/pysched/modules/: barbeque_utils.py.in  dse.py  parameters.py  recipe_utils.py
tools/pysched/utils/: fair_simulation.py  grapher.py  template.conf  var_simulation.py
tools/test/: bbqueTestappLauncher.sh.in
(+394 files in other folders)
