
# .:: Mandatory Tools required for the usage of the BarbequeRTRM
# These tools must be:
# - part of the BarbequeTOOLS componet
# - have a name starting by "bbque-"

#----- Deploy the PIL Layouts parser and CGroup generator script
if (CONFIG_BBQUE_PIL_LEGACY)
	install(PROGRAMS bbquePlatformLayoutParser.awk
		DESTINATION ${BBQUE_PATH_BBQ}
		COMPONENT BarbequeTOOLS
		RENAME bbque-plp)
endif (CONFIG_BBQUE_PIL_LEGACY)

# .:: Accessory Tools to simplify the usage of the BarbequeRTRM
# These tools must be:
# - part of the BarbequeUTILS componet
# - have a name starting by "bbque-"

#----- Deploy the BBQ CGroups Release Agent
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/bbque-release-agent.in"
	"${PROJECT_BINARY_DIR}/tools/bbque-release-agent"
	@ONLY
)
install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbque-release-agent"
	DESTINATION ${BBQUE_PATH_BBQ}
	COMPONENT BarbequeUTILS
	RENAME bbque-release-agent)

#----- Deploy the BBQ Control Console script
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/bbqueConsole.sh.in"
	"${PROJECT_BINARY_DIR}/tools/bbqueConsole.sh"
	@ONLY
)
install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueConsole.sh"
	DESTINATION ${BBQUE_PATH_BBQ}
	COMPONENT BarbequeUTILS
	RENAME bbque-console)

#----- Deploy the BBQ Stress Test script
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/bbqueStressTest.sh.in"
	"${PROJECT_BINARY_DIR}/tools/bbqueStressTest.sh"
	@ONLY
)
install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueStressTest.sh"
	DESTINATION ${BBQUE_PATH_BBQ}
	COMPONENT BarbequeUTILS
	RENAME bbque-stest)

#----- Deploy the BBQ OP List generator script
install(PROGRAMS "${PROJECT_SOURCE_DIR}/tools/bbqueOpListBuilder.awk"
	DESTINATION ${BBQUE_PATH_BBQ}
	COMPONENT BarbequeUTILS
	RENAME bbque-oplb)

#----- Deploy the BBQ Metrics Plotting scripts
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/bbqueLogParser.awk.in"
	"${PROJECT_BINARY_DIR}/tools/bbqueLogParser.awk"
	@ONLY
)
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/bbqueLogPlots.sh.in"
	"${PROJECT_BINARY_DIR}/tools/bbqueLogPlots.sh"
	@ONLY
)

install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueLogParser.awk"
	DESTINATION ${BBQUE_PATH_BBQ}
	COMPONENT BarbequeUTILS
	RENAME bbque-logparser)
install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueLogPlots.sh"
	DESTINATION ${BBQUE_PATH_BBQ}
	COMPONENT BarbequeUTILS
	RENAME bbque-logplots)

# ----- CPU Usage dump
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/bbqueCpuUsageDumpParser.awk.in"
	"${PROJECT_BINARY_DIR}/tools/bbqueCpuUsageDumpParser.awk"
	@ONLY
)
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/bbqueCpuUsageDump.sh.in"
	"${PROJECT_BINARY_DIR}/tools/bbqueCpuUsageDump.sh"
	@ONLY
)
install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueCpuUsageDumpParser.awk"
	DESTINATION ${BBQUE_PATH_BBQ}
	RENAME bbque-cpu-parser)
install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueCpuUsageDump.sh"
	DESTINATION ${BBQUE_PATH_BBQ}
	RENAME bbque-cpu-dump)


#----- Deploy the BBQ Signal Stability Analysis script
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/bbqueStabilityAnalysisPlotter.sh.in"
	"${PROJECT_BINARY_DIR}/tools/bbqueStabilityAnalysisPlotter.sh"
	@ONLY
)
install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueStabilityAnalysisPlotter.sh"
	DESTINATION ${BBQUE_PATH_BBQ}
	COMPONENT BarbequeUTILS
	RENAME bbque-stability-analysis)


#----- Deploy the Plugin development script
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/development/bbquePluginDev.sh.in"
	"${PROJECT_BINARY_DIR}/tools/development/bbquePluginDev.sh"
	@ONLY
)
install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/development/bbquePluginDev.sh"
	DESTINATION ${BBQUE_PATH_BBQ}
	RENAME bbque-dev-plugin
)

#----- Deploy the Code Restyling script
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/development/bbqueCodeStyle.sh.in"
	"${PROJECT_BINARY_DIR}/tools/development/bbqueCodeStyle.sh"
	@ONLY
)
install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/development/bbqueCodeStyle.sh"
	DESTINATION ${BBQUE_PATH_BBQ}
	RENAME bbque-dev-codestyler
)
install(FILES
	"${PROJECT_SOURCE_DIR}/tools/development/templates/plugin_templates.tar.bz2"
	"${PROJECT_SOURCE_DIR}/tools/development/templates/schedpol_templates.tar.bz2"
	"${PROJECT_SOURCE_DIR}/tools/development/templates/rloader_templates.tar.bz2"
	DESTINATION ${BBQUE_PATH_CMAKE}
)

#----- Deploy the python scheduler tester
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/pysched/modules/barbeque_utils.py.in"
	"${PROJECT_BINARY_DIR}/tools/pysched/modules/barbeque_utils.py"
	@ONLY
)
install(
	DIRECTORY ${PROJECT_SOURCE_DIR}/tools/pysched/
	DESTINATION ${BBQUE_PATH_BBQ}/pysched/
	USE_SOURCE_PERMISSIONS
	FILES_MATCHING
	PATTERN "*.py"
	PATTERN "*.conf"
)
install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/pysched/modules/barbeque_utils.py"
	DESTINATION ${BBQUE_PATH_BBQ}/pysched/modules/
)

# ------- Deploy the BarbequeRTRM power traces plotter
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/bbquePlotPowerTrace.py.in"
	"${PROJECT_BINARY_DIR}/tools/bbquePlotPowerTrace.py"
	@ONLY
)
install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbquePlotPowerTrace.py"
	DESTINATION ${BBQUE_PATH_BBQ}
	RENAME bbque-plotrace)

add_subdirectory(plpxml)

# ------- Deploy the BarbequeRTRM systemd configuration patch applier
configure_file (
	"${PROJECT_SOURCE_DIR}/tools/bbqueSystemdSetup.sh"
	"${PROJECT_BINARY_DIR}/tools/bbqueSystemdSetup.sh"
	@ONLY
)
install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueSystemdSetup.sh"
	DESTINATION ${BBQUE_PATH_BBQ}
	COMPONENT BarbequeUTILS
	RENAME bbque-systemd-setup)
